# symmetric-word-triples-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md  result.txt
symmetric-word-triples/: Cargo.toml  trie.rs
symmetric-word-triples/benches/: my_benchmark.rs
symmetric-word-triples/src/: lib.rs  main.rs  parser.rs  threadpool.rs
symmetric-word-triples/src/parser/: matrix.rs  prefix.rs  token.rs  wordfilter.rs
symmetric-word-triples/tests/: matrix_token.rs
