[package]
name = "symmetric-word-triples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4.7"
dashmap = "5.4.0"
mimalloc = "0.1.34"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false