[package]
name = "symmetric-word-triples"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4.7"

dashmap = "5.4.0"
ahash = "0.8.3"

rayon = "1.7.0"

mimalloc = "0.1.34"

encoding_rs_io = "0.1.7"
encoding_rs = "0.8.32"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false